Correct exec module tests and convert to new syntax

--- a/src/tests/modules/exec/module.conf
+++ b/src/tests/modules/exec/module.conf
@@ -5,22 +5,22 @@ exec exec_async {
 	timeout = 10
 }
 
-exec exec_async_inline {
+exec exec_async_mod {
 	wait = no
 	input_pairs = request
 	shell_escape = yes
 	timeout = 10
-	program = "/bin/sh -c 'echo goodbye'"
+	program = "/bin/sh -c 'echo \'Tmp-String-0 = welcome\''"
 }
 
 exec exec_sync {
 	wait = yes
 	input_pairs = control
 	shell_escape = yes
-	timeout = 10
+	timeout = 1
 }
 
-exec exec_sync_inline {
+exec exec_sync_mod {
 	wait = yes
 	input_pairs = control
 	output_pairs = control
