Add simple tests for exec module calls

--- a/src/tests/modules/exec/module.conf
+++ b/src/tests/modules/exec/module.conf
@@ -5,6 +5,14 @@ exec exec_async {
 	timeout = 10
 }
 
+exec exec_async_inline {
+	wait = no
+	input_pairs = request
+	shell_escape = yes
+	timeout = 10
+	program = "/bin/sh -c 'echo goodbye'"
+}
+
 exec exec_sync {
 	wait = yes
 	input_pairs = control
@@ -12,3 +20,11 @@ exec exec_sync {
 	timeout = 10
 }
 
+exec exec_sync_inline {
+	wait = yes
+	input_pairs = control
+	output_pairs = control
+	shell_escape = yes
+	timeout = 10
+	program = "/bin/sh -c 'echo \'Tmp-String-0 = welcome\''"
+}
