Add tests for %(perl: ) passing arrays and returning arrays / hashes

--- a/src/tests/keywords/perl.conf
+++ b/src/tests/keywords/perl.conf
@@ -40,3 +40,34 @@ sub add {
 	}
 	return $ret;
 }
+
+# Function which expects the first argument to be an array ref
+sub xlatarray{
+	return join('|', @{ $_[0] });
+}
+
+# Take a scalar and return an array
+sub xlatscalar2array {
+	return split(/ /, $_[0]);
+}
+
+# Take an arbitary number of scalars and retun an array of array refs
+sub xlatscalar2arrayref {
+	my @array;
+	for (my $i = 0; $i <= $#_; $i++) {
+		my @subarray = split(/ /, $_[$i]);
+		push (@array, \@subarray);
+	}
+	return @array;
+}
+
+# Function which receives an array and returns a hash
+sub xlatarray2hash {
+	my %hash;
+	my $i = 1;
+	foreach my $v (@{ $_[0] }) {
+		$hash{'V'.$i} = $v;
+		$i++;
+	}
+	return %hash;
+}
