Add a test which reads command line expanded args and env variables

--- a/src/tests/modules/exec/module.conf
+++ b/src/tests/modules/exec/module.conf
@@ -28,3 +28,12 @@ exec exec_sync_mod {
 	timeout = 10
 	program = "/bin/sh -c 'echo \'Tmp-String-0 = welcome\''"
 }
+
+exec exec_sync_attrs {
+	wait = yes
+	input_pairs = request
+	output_pairs = control
+	shell_escape = yes
+	timeout = 10
+	program = "/bin/sh $ENV{MODULE_TEST_DIR}/attrs.sh %{User-Name}"
+}
