--- a/src/tests/modules/exec/module.conf
+++ b/src/tests/modules/exec/module.conf
@@ -37,3 +37,10 @@ exec exec_sync_attrs {
 	timeout = 10
 	program = "/bin/sh $ENV{MODULE_TEST_DIR}/attrs.sh %{User-Name}"
 }
+
+exec exec_sync_fail {
+	wait = yes
+	output_pairs = control
+	timeout = 10
+	program = "/bin/sh $ENV{MODULE_TEST_DIR}/fail.sh"
+}
