add AC_ARG_WITH([]modname, ...)

--- a/src/modules/rlm_eap/types/rlm_eap_pwd/configure.ac
+++ b/src/modules/rlm_eap/types/rlm_eap_pwd/configure.ac
@@ -12,6 +12,9 @@ AC_DEFUN(modname,[rlm_eap_pwd])
 mod_ldflags=
 mod_cflags=
 
+AC_ARG_WITH([]modname,
+[  --with-[]modname              build []modname. (default=yes)])
+
 if test x$with_[]modname != xno; then
 
 	dnl ############################################################
