add libidn11-dev to debian build deps

--- a/debian/control.in
+++ b/debian/control.in
@@ -7,6 +7,7 @@ Build-Depends: @BUILDDEPS@ debhelper (>= 9),
  libcurl4-openssl-dev | libcurl4-gnutls-dev,
  libcap-dev,
  libgdbm-dev,
+ libidn11-dev,
  libjson-perl,
  libjson-c (>= 1.13) | libjson-c4 | libjson-c5,
  libjson-c-dev,
