--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -276,9 +276,6 @@ jobs:
       env:
         SMTP_TEST_SERVER: 127.0.0.1
         SMTP_TEST_SERVER_PORT: 2525
-        IMAP_TEST_SERVER: 127.0.0.1
-        IMAP_TEST_SERVER_PORT: 1430
-        IMAP_TEST_SERVER_SSL_PORT: 1431
         SQL_MYSQL_TEST_SERVER: 127.0.0.1
         SQL_POSTGRESQL_TEST_SERVER: 127.0.0.1
         LDAP_TEST_SERVER: 127.0.0.1
@@ -288,6 +285,9 @@ jobs:
         REST_TEST_SERVER_SSL_PORT: 8443
 #       REDIS_TEST_SERVER: 127.0.0.1
 #       REDIS_IPPOOL_TEST_SERVER: 127.0.0.1
+#       IMAP_TEST_SERVER: 127.0.0.1
+#       IMAP_TEST_SERVER_PORT: 1430
+#       IMAP_TEST_SERVER_SSL_PORT: 1431
 
     # Includes hack to disable trunk tests on MacOS which are currently broken
     # Also, no detect_leaks support for ASAN
