--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -274,8 +274,6 @@ jobs:
         make ci-test
 
       env:
-        SMTP_TEST_SERVER: 127.0.0.1
-        SMTP_TEST_SERVER_PORT: 2525
         SQL_MYSQL_TEST_SERVER: 127.0.0.1
         SQL_POSTGRESQL_TEST_SERVER: 127.0.0.1
         LDAP_TEST_SERVER: 127.0.0.1
@@ -283,6 +281,8 @@ jobs:
         REST_TEST_SERVER: 127.0.0.1
         REST_TEST_SERVER_PORT: 8080
         REST_TEST_SERVER_SSL_PORT: 8443
+#       SMTP_TEST_SERVER: 127.0.0.1
+#       SMTP_TEST_SERVER_PORT: 2525
 #       REDIS_TEST_SERVER: 127.0.0.1
 #       REDIS_IPPOOL_TEST_SERVER: 127.0.0.1
 #       IMAP_TEST_SERVER: 127.0.0.1
