--- a/scripts/docker/build-debian9/Dockerfile.deps
+++ b/scripts/docker/build-debian9/Dockerfile.deps
@@ -26,6 +26,10 @@ RUN apt-get update && \
 #  eapol_test dependencies
         libnl-3-dev \
         libnl-genl-3-dev \
+#  For debugging (e.g. in crossbuild)
+        gdb \
+        less \
+        vim \
 #  Compilers
         g++ && \
     bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
