docker: make sure we are using the latest build tools in CentOS 7

--- a/scripts/docker/build-centos7/Dockerfile.deps
+++ b/scripts/docker/build-centos7/Dockerfile.deps
@@ -140,3 +140,5 @@ RUN for i in $(git for-each-ref --format='%(refname:short)' refs/remotes/origin 
 #
 ENV BUILDDIR=/root/rpmbuild
 RUN rpmdev-setuptree
+
+RUN printf 'PATH=/opt/rh/$(scl -l)/root/usr/bin:$PATH\nexport PATH\n' > /etc/profile.d/devtoolset.sh
