--- a/.github/workflows/ci-rpm.yml
+++ b/.github/workflows/ci-rpm.yml
@@ -142,7 +142,6 @@ jobs:
     - name: Build RPMs
       run: |
         [ -r /opt/rh/devtoolset-8/enable ] && source /opt/rh/devtoolset-8/enable || :
-        ./configure
         make rpm
       working-directory: freeradius
 
@@ -165,6 +164,7 @@ jobs:
         [ -r /opt/rh/devtoolset-8/enable ] && source /opt/rh/devtoolset-8/enable || :
         echo "top_srcdir:=$(pwd)" > Make.inc
         echo "BUILD_DIR:=build" >> Make.inc
+        ./configure --without-openssl
         make -j `nproc` eapol_test
         mv scripts/ci/eapol_test/eapol_test ../rpms
       working-directory: freeradius
